--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 <div class="container my-3">
 	<h2>Your Todos</h2>
 </div>
-<div class="container my-3" style="overflow-y:scroll;">
+<div class="container my-3" style="overflow-x:scroll;">
     <table class="table">
         {% if alltodo|length == 0 %}
         <div class="alert alert-primary" role="alert">
