--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 <div class="container my-3">
 	<h2>Your Todos</h2>
 </div>
-<div class="container my-3" style="overflow-x:scroll;">
+<div class="container my-3 hor-scroll">
     <table class="table">
         {% if alltodo|length == 0 %}
         <div class="alert alert-primary" role="alert">
@@ -59,5 +59,12 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
     crossorigin="anonymous"></script>
-    
+
+<style>
+    @media only screen and (max-width: 700px) {
+    .hor-scroll {
+        overflow-x: scroll;
+    }
+}
+</style>
 {% endblock body %}
